Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Parser.y
-----------------------------------------------------------------------------

state 63 contains 2 shift/reduce conflicts.
state 83 contains 2 shift/reduce conflicts.
state 84 contains 2 shift/reduce conflicts.

terminal LIMIT is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> Queries                            (0)
	Queries -> Query                                   (1)
	Queries -> Query Queries                           (2)
	Query -> SelectQuery                               (3)
	Query -> CreateEdgeQuery                           (4)
	Query -> UpdateQuery                               (5)
	Query -> DeleteQuery                               (6)
	Query -> DeleteEdgeQuery                           (7)
	Query -> SelectFile                                (8)
	SelectFile -> FROM STRING                          (9)
	SelectQuery -> SELECT PropertyRefs FROM NodePatterns WHERE Condition   (10)
	SelectQuery -> SELECT PropertyRefs FROM NodePatterns   (11)
	SelectQuery -> SELECT '*' FROM NodePatterns WHERE Condition   (12)
	SelectQuery -> SELECT '*' FROM NodePatterns        (13)
	CreateEdgeQuery -> CREATE EDGE FROM NodePattern TO NodePattern TYPE EdgeType   (14)
	UpdateQuery -> UPDATE NodePatterns SET PropertyUpdates   (15)
	DeleteQuery -> DELETE NodePatterns WHERE Condition   (16)
	DeleteQuery -> DELETE NodePatterns                 (17)
	DeleteEdgeQuery -> DELETE EDGE TYPE EdgeType       (18)
	PropertyRefs -> PropertyRef                        (19)
	PropertyRefs -> PropertyRef ',' PropertyRefs       (20)
	PropertyRef -> IDENT '.' IDENT                     (21)
	PropertyRef -> IDENT                               (22)
	NodePatterns -> NodePattern                        (23)
	NodePatterns -> NodePattern ',' NodePatterns       (24)
	NodePattern -> '(' IDENT ')'                       (25)
	EdgeType -> ':' IDENT                              (26)
	EdgePattern -> '[' NodePattern '-' EdgeType '->' NodePattern ']'   (27)
	Condition -> Condition AND Condition               (28)
	Condition -> Condition OR Condition                (29)
	Condition -> NOT Condition                         (30)
	Condition -> PropertyRef '=' Expression            (31)
	Condition -> PropertyRef '<' Expression            (32)
	Condition -> PropertyRef '>' Expression            (33)
	Condition -> PropertyRef '<=' Expression           (34)
	Condition -> PropertyRef '>=' Expression           (35)
	Condition -> PropertyRef STARTS_WITH Expression    (36)
	Condition -> PropertyRef HAS STRING                (37)
	Condition -> '(' NodePattern ')' '-' EdgePattern '->' '(' NodePattern ')'   (38)
	Condition -> '(' Condition ')'                     (39)
	PropertyUpdates -> PropertyUpdate                  (40)
	PropertyUpdates -> PropertyUpdate ',' PropertyUpdates   (41)
	PropertyUpdate -> PropertyRef '=' Expression       (42)
	Expression -> INT                                  (43)
	Expression -> STRING                               (44)
	Expression -> PropertyRef                          (45)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	SELECT         { Tok _ TokSelect }
	FROM           { Tok _ TokFrom }
	WHERE          { Tok _ TokWhere }
	AND            { Tok _ TokAnd }
	OR             { Tok _ TokOr }
	LIMIT          { Tok _ TokLimit }
	CREATE         { Tok _ TokCreate }
	EDGE           { Tok _ TokEdge }
	TO             { Tok _ TokTo }
	TYPE           { Tok _ TokType }
	STARTS_WITH    { Tok _ TokStartsWith }
	NOT            { Tok _ TokNot }
	UPDATE         { Tok _ TokUpdate }
	SET            { Tok _ TokSet }
	DELETE         { Tok _ TokDelete }
	','            { Tok _ TokComma }
	'='            { Tok _ TokEqual }
	'<'            { Tok _ TokLT }
	'>'            { Tok _ TokGT }
	'<='           { Tok _ TokLTE }
	'>='           { Tok _ TokGTE }
	'('            { Tok _ TokLParen }
	')'            { Tok _ TokRParen }
	'.'            { Tok _ TokPeriod }
	':'            { Tok _ TokColon }
	'*'            { Tok _ TokAsterisk }
	'->'           { Tok _ TokArrow }
	'['            { Tok _ TokLBracket }
	']'            { Tok _ TokRBracket }
	'-'            { Tok _ TokMinus }
	HAS            { Tok _ TokHas }
	IDENT          { Tok _ (TokIdent $$) }
	STRING         { Tok _ (TokString $$) }
	INT            { Tok _ (TokInt $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	Queries         rules 1, 2
	Query           rules 3, 4, 5, 6, 7, 8
	SelectFile      rule  9
	SelectQuery     rules 10, 11, 12, 13
	CreateEdgeQuery rule  14
	UpdateQuery     rule  15
	DeleteQuery     rules 16, 17
	DeleteEdgeQuery rule  18
	PropertyRefs    rules 19, 20
	PropertyRef     rules 21, 22
	NodePatterns    rules 23, 24
	NodePattern     rule  25
	EdgeType        rule  26
	EdgePattern     rule  27
	Condition       rules 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39
	PropertyUpdates rules 40, 41
	PropertyUpdate  rule  42
	Expression      rules 43, 44, 45

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parse -> . Queries                           (rule 0)

	SELECT         shift, and enter state 9
	FROM           shift, and enter state 10
	CREATE         shift, and enter state 11
	UPDATE         shift, and enter state 12
	DELETE         shift, and enter state 13

	Queries        goto state 14
	Query          goto state 15
	SelectFile     goto state 3
	SelectQuery    goto state 4
	CreateEdgeQuerygoto state 5
	UpdateQuery    goto state 6
	DeleteQuery    goto state 7
	DeleteEdgeQuerygoto state 8

State 1

	Queries -> . Query                                  (rule 1)

	SELECT         shift, and enter state 9
	FROM           shift, and enter state 10
	CREATE         shift, and enter state 11
	UPDATE         shift, and enter state 12
	DELETE         shift, and enter state 13

	Query          goto state 2
	SelectFile     goto state 3
	SelectQuery    goto state 4
	CreateEdgeQuerygoto state 5
	UpdateQuery    goto state 6
	DeleteQuery    goto state 7
	DeleteEdgeQuerygoto state 8

State 2

	Queries -> Query .                                  (rule 1)



State 3

	Query -> SelectFile .                               (rule 8)

	SELECT         reduce using rule 8
	FROM           reduce using rule 8
	CREATE         reduce using rule 8
	UPDATE         reduce using rule 8
	DELETE         reduce using rule 8
	%eof           reduce using rule 8


State 4

	Query -> SelectQuery .                              (rule 3)

	SELECT         reduce using rule 3
	FROM           reduce using rule 3
	CREATE         reduce using rule 3
	UPDATE         reduce using rule 3
	DELETE         reduce using rule 3
	%eof           reduce using rule 3


State 5

	Query -> CreateEdgeQuery .                          (rule 4)

	SELECT         reduce using rule 4
	FROM           reduce using rule 4
	CREATE         reduce using rule 4
	UPDATE         reduce using rule 4
	DELETE         reduce using rule 4
	%eof           reduce using rule 4


State 6

	Query -> UpdateQuery .                              (rule 5)

	SELECT         reduce using rule 5
	FROM           reduce using rule 5
	CREATE         reduce using rule 5
	UPDATE         reduce using rule 5
	DELETE         reduce using rule 5
	%eof           reduce using rule 5


State 7

	Query -> DeleteQuery .                              (rule 6)

	SELECT         reduce using rule 6
	FROM           reduce using rule 6
	CREATE         reduce using rule 6
	UPDATE         reduce using rule 6
	DELETE         reduce using rule 6
	%eof           reduce using rule 6


State 8

	Query -> DeleteEdgeQuery .                          (rule 7)

	SELECT         reduce using rule 7
	FROM           reduce using rule 7
	CREATE         reduce using rule 7
	UPDATE         reduce using rule 7
	DELETE         reduce using rule 7
	%eof           reduce using rule 7


State 9

	SelectQuery -> SELECT . PropertyRefs FROM NodePatterns WHERE Condition    (rule 10)
	SelectQuery -> SELECT . PropertyRefs FROM NodePatterns    (rule 11)
	SelectQuery -> SELECT . '*' FROM NodePatterns WHERE Condition    (rule 12)
	SelectQuery -> SELECT . '*' FROM NodePatterns       (rule 13)

	'*'            shift, and enter state 26
	IDENT          shift, and enter state 27

	PropertyRefs   goto state 24
	PropertyRef    goto state 25

State 10

	SelectFile -> FROM . STRING                         (rule 9)

	STRING         shift, and enter state 23


State 11

	CreateEdgeQuery -> CREATE . EDGE FROM NodePattern TO NodePattern TYPE EdgeType    (rule 14)

	EDGE           shift, and enter state 22


State 12

	UpdateQuery -> UPDATE . NodePatterns SET PropertyUpdates    (rule 15)

	'('            shift, and enter state 20

	NodePatterns   goto state 21
	NodePattern    goto state 18

State 13

	DeleteQuery -> DELETE . NodePatterns WHERE Condition    (rule 16)
	DeleteQuery -> DELETE . NodePatterns                (rule 17)
	DeleteEdgeQuery -> DELETE . EDGE TYPE EdgeType      (rule 18)

	EDGE           shift, and enter state 19
	'('            shift, and enter state 20

	NodePatterns   goto state 17
	NodePattern    goto state 18

State 14

	%start_parse -> Queries .                           (rule 0)

	%eof           accept


State 15

	Queries -> Query .                                  (rule 1)
	Queries -> Query . Queries                          (rule 2)

	SELECT         shift, and enter state 9
	FROM           shift, and enter state 10
	CREATE         shift, and enter state 11
	UPDATE         shift, and enter state 12
	DELETE         shift, and enter state 13
	%eof           reduce using rule 1

	Queries        goto state 16
	Query          goto state 15
	SelectFile     goto state 3
	SelectQuery    goto state 4
	CreateEdgeQuerygoto state 5
	UpdateQuery    goto state 6
	DeleteQuery    goto state 7
	DeleteEdgeQuerygoto state 8

State 16

	Queries -> Query Queries .                          (rule 2)

	%eof           reduce using rule 2


State 17

	DeleteQuery -> DELETE NodePatterns . WHERE Condition    (rule 16)
	DeleteQuery -> DELETE NodePatterns .                (rule 17)

	SELECT         reduce using rule 17
	FROM           reduce using rule 17
	WHERE          shift, and enter state 37
	CREATE         reduce using rule 17
	UPDATE         reduce using rule 17
	DELETE         reduce using rule 17
	%eof           reduce using rule 17


State 18

	NodePatterns -> NodePattern .                       (rule 23)
	NodePatterns -> NodePattern . ',' NodePatterns      (rule 24)

	SELECT         reduce using rule 23
	FROM           reduce using rule 23
	WHERE          reduce using rule 23
	CREATE         reduce using rule 23
	UPDATE         reduce using rule 23
	SET            reduce using rule 23
	DELETE         reduce using rule 23
	','            shift, and enter state 36
	%eof           reduce using rule 23


State 19

	DeleteEdgeQuery -> DELETE EDGE . TYPE EdgeType      (rule 18)

	TYPE           shift, and enter state 35


State 20

	NodePattern -> '(' . IDENT ')'                      (rule 25)

	IDENT          shift, and enter state 34


State 21

	UpdateQuery -> UPDATE NodePatterns . SET PropertyUpdates    (rule 15)

	SET            shift, and enter state 33


State 22

	CreateEdgeQuery -> CREATE EDGE . FROM NodePattern TO NodePattern TYPE EdgeType    (rule 14)

	FROM           shift, and enter state 32


State 23

	SelectFile -> FROM STRING .                         (rule 9)

	SELECT         reduce using rule 9
	FROM           reduce using rule 9
	CREATE         reduce using rule 9
	UPDATE         reduce using rule 9
	DELETE         reduce using rule 9
	%eof           reduce using rule 9


State 24

	SelectQuery -> SELECT PropertyRefs . FROM NodePatterns WHERE Condition    (rule 10)
	SelectQuery -> SELECT PropertyRefs . FROM NodePatterns    (rule 11)

	FROM           shift, and enter state 31


State 25

	PropertyRefs -> PropertyRef .                       (rule 19)
	PropertyRefs -> PropertyRef . ',' PropertyRefs      (rule 20)

	FROM           reduce using rule 19
	','            shift, and enter state 30


State 26

	SelectQuery -> SELECT '*' . FROM NodePatterns WHERE Condition    (rule 12)
	SelectQuery -> SELECT '*' . FROM NodePatterns       (rule 13)

	FROM           shift, and enter state 29


State 27

	PropertyRef -> IDENT . '.' IDENT                    (rule 21)
	PropertyRef -> IDENT .                              (rule 22)

	SELECT         reduce using rule 22
	FROM           reduce using rule 22
	AND            reduce using rule 22
	OR             reduce using rule 22
	CREATE         reduce using rule 22
	STARTS_WITH    reduce using rule 22
	UPDATE         reduce using rule 22
	DELETE         reduce using rule 22
	','            reduce using rule 22
	'='            reduce using rule 22
	'<'            reduce using rule 22
	'>'            reduce using rule 22
	'<='           reduce using rule 22
	'>='           reduce using rule 22
	')'            reduce using rule 22
	'.'            shift, and enter state 28
	HAS            reduce using rule 22
	%eof           reduce using rule 22


State 28

	PropertyRef -> IDENT '.' . IDENT                    (rule 21)

	IDENT          shift, and enter state 53


State 29

	SelectQuery -> SELECT '*' FROM . NodePatterns WHERE Condition    (rule 12)
	SelectQuery -> SELECT '*' FROM . NodePatterns       (rule 13)

	'('            shift, and enter state 20

	NodePatterns   goto state 52
	NodePattern    goto state 18

State 30

	PropertyRefs -> PropertyRef ',' . PropertyRefs      (rule 20)

	IDENT          shift, and enter state 27

	PropertyRefs   goto state 51
	PropertyRef    goto state 25

State 31

	SelectQuery -> SELECT PropertyRefs FROM . NodePatterns WHERE Condition    (rule 10)
	SelectQuery -> SELECT PropertyRefs FROM . NodePatterns    (rule 11)

	'('            shift, and enter state 20

	NodePatterns   goto state 50
	NodePattern    goto state 18

State 32

	CreateEdgeQuery -> CREATE EDGE FROM . NodePattern TO NodePattern TYPE EdgeType    (rule 14)

	'('            shift, and enter state 20

	NodePattern    goto state 49

State 33

	UpdateQuery -> UPDATE NodePatterns SET . PropertyUpdates    (rule 15)

	IDENT          shift, and enter state 27

	PropertyRef    goto state 46
	PropertyUpdatesgoto state 47
	PropertyUpdate goto state 48

State 34

	NodePattern -> '(' IDENT . ')'                      (rule 25)

	')'            shift, and enter state 45


State 35

	DeleteEdgeQuery -> DELETE EDGE TYPE . EdgeType      (rule 18)

	':'            shift, and enter state 44

	EdgeType       goto state 43

State 36

	NodePatterns -> NodePattern ',' . NodePatterns      (rule 24)

	'('            shift, and enter state 20

	NodePatterns   goto state 42
	NodePattern    goto state 18

State 37

	DeleteQuery -> DELETE NodePatterns WHERE . Condition    (rule 16)

	NOT            shift, and enter state 40
	'('            shift, and enter state 41
	IDENT          shift, and enter state 27

	PropertyRef    goto state 38
	Condition      goto state 39

State 38

	Condition -> PropertyRef . '=' Expression           (rule 31)
	Condition -> PropertyRef . '<' Expression           (rule 32)
	Condition -> PropertyRef . '>' Expression           (rule 33)
	Condition -> PropertyRef . '<=' Expression          (rule 34)
	Condition -> PropertyRef . '>=' Expression          (rule 35)
	Condition -> PropertyRef . STARTS_WITH Expression    (rule 36)
	Condition -> PropertyRef . HAS STRING               (rule 37)

	STARTS_WITH    shift, and enter state 66
	'='            shift, and enter state 67
	'<'            shift, and enter state 68
	'>'            shift, and enter state 69
	'<='           shift, and enter state 70
	'>='           shift, and enter state 71
	HAS            shift, and enter state 72


State 39

	DeleteQuery -> DELETE NodePatterns WHERE Condition .    (rule 16)
	Condition -> Condition . AND Condition              (rule 28)
	Condition -> Condition . OR Condition               (rule 29)

	SELECT         reduce using rule 16
	FROM           reduce using rule 16
	AND            shift, and enter state 64
	OR             shift, and enter state 65
	CREATE         reduce using rule 16
	UPDATE         reduce using rule 16
	DELETE         reduce using rule 16
	%eof           reduce using rule 16


State 40

	Condition -> NOT . Condition                        (rule 30)

	NOT            shift, and enter state 40
	'('            shift, and enter state 41
	IDENT          shift, and enter state 27

	PropertyRef    goto state 38
	Condition      goto state 63

State 41

	Condition -> '(' . NodePattern ')' '-' EdgePattern '->' '(' NodePattern ')'    (rule 38)
	Condition -> '(' . Condition ')'                    (rule 39)

	NOT            shift, and enter state 40
	'('            shift, and enter state 62
	IDENT          shift, and enter state 27

	PropertyRef    goto state 38
	NodePattern    goto state 60
	Condition      goto state 61

State 42

	NodePatterns -> NodePattern ',' NodePatterns .      (rule 24)

	SELECT         reduce using rule 24
	FROM           reduce using rule 24
	WHERE          reduce using rule 24
	CREATE         reduce using rule 24
	UPDATE         reduce using rule 24
	SET            reduce using rule 24
	DELETE         reduce using rule 24
	%eof           reduce using rule 24


State 43

	DeleteEdgeQuery -> DELETE EDGE TYPE EdgeType .      (rule 18)

	SELECT         reduce using rule 18
	FROM           reduce using rule 18
	CREATE         reduce using rule 18
	UPDATE         reduce using rule 18
	DELETE         reduce using rule 18
	%eof           reduce using rule 18


State 44

	EdgeType -> ':' . IDENT                             (rule 26)

	IDENT          shift, and enter state 59


State 45

	NodePattern -> '(' IDENT ')' .                      (rule 25)

	SELECT         reduce using rule 25
	FROM           reduce using rule 25
	WHERE          reduce using rule 25
	CREATE         reduce using rule 25
	TO             reduce using rule 25
	TYPE           reduce using rule 25
	UPDATE         reduce using rule 25
	SET            reduce using rule 25
	DELETE         reduce using rule 25
	','            reduce using rule 25
	')'            reduce using rule 25
	']'            reduce using rule 25
	'-'            reduce using rule 25
	%eof           reduce using rule 25


State 46

	PropertyUpdate -> PropertyRef . '=' Expression      (rule 42)

	'='            shift, and enter state 58


State 47

	UpdateQuery -> UPDATE NodePatterns SET PropertyUpdates .    (rule 15)

	SELECT         reduce using rule 15
	FROM           reduce using rule 15
	CREATE         reduce using rule 15
	UPDATE         reduce using rule 15
	DELETE         reduce using rule 15
	%eof           reduce using rule 15


State 48

	PropertyUpdates -> PropertyUpdate .                 (rule 40)
	PropertyUpdates -> PropertyUpdate . ',' PropertyUpdates    (rule 41)

	SELECT         reduce using rule 40
	FROM           reduce using rule 40
	CREATE         reduce using rule 40
	UPDATE         reduce using rule 40
	DELETE         reduce using rule 40
	','            shift, and enter state 57
	%eof           reduce using rule 40


State 49

	CreateEdgeQuery -> CREATE EDGE FROM NodePattern . TO NodePattern TYPE EdgeType    (rule 14)

	TO             shift, and enter state 56


State 50

	SelectQuery -> SELECT PropertyRefs FROM NodePatterns . WHERE Condition    (rule 10)
	SelectQuery -> SELECT PropertyRefs FROM NodePatterns .    (rule 11)

	SELECT         reduce using rule 11
	FROM           reduce using rule 11
	WHERE          shift, and enter state 55
	CREATE         reduce using rule 11
	UPDATE         reduce using rule 11
	DELETE         reduce using rule 11
	%eof           reduce using rule 11


State 51

	PropertyRefs -> PropertyRef ',' PropertyRefs .      (rule 20)

	FROM           reduce using rule 20


State 52

	SelectQuery -> SELECT '*' FROM NodePatterns . WHERE Condition    (rule 12)
	SelectQuery -> SELECT '*' FROM NodePatterns .       (rule 13)

	SELECT         reduce using rule 13
	FROM           reduce using rule 13
	WHERE          shift, and enter state 54
	CREATE         reduce using rule 13
	UPDATE         reduce using rule 13
	DELETE         reduce using rule 13
	%eof           reduce using rule 13


State 53

	PropertyRef -> IDENT '.' IDENT .                    (rule 21)

	SELECT         reduce using rule 21
	FROM           reduce using rule 21
	AND            reduce using rule 21
	OR             reduce using rule 21
	CREATE         reduce using rule 21
	STARTS_WITH    reduce using rule 21
	UPDATE         reduce using rule 21
	DELETE         reduce using rule 21
	','            reduce using rule 21
	'='            reduce using rule 21
	'<'            reduce using rule 21
	'>'            reduce using rule 21
	'<='           reduce using rule 21
	'>='           reduce using rule 21
	')'            reduce using rule 21
	HAS            reduce using rule 21
	%eof           reduce using rule 21


State 54

	SelectQuery -> SELECT '*' FROM NodePatterns WHERE . Condition    (rule 12)

	NOT            shift, and enter state 40
	'('            shift, and enter state 41
	IDENT          shift, and enter state 27

	PropertyRef    goto state 38
	Condition      goto state 92

State 55

	SelectQuery -> SELECT PropertyRefs FROM NodePatterns WHERE . Condition    (rule 10)

	NOT            shift, and enter state 40
	'('            shift, and enter state 41
	IDENT          shift, and enter state 27

	PropertyRef    goto state 38
	Condition      goto state 91

State 56

	CreateEdgeQuery -> CREATE EDGE FROM NodePattern TO . NodePattern TYPE EdgeType    (rule 14)

	'('            shift, and enter state 20

	NodePattern    goto state 90

State 57

	PropertyUpdates -> PropertyUpdate ',' . PropertyUpdates    (rule 41)

	IDENT          shift, and enter state 27

	PropertyRef    goto state 46
	PropertyUpdatesgoto state 89
	PropertyUpdate goto state 48

State 58

	PropertyUpdate -> PropertyRef '=' . Expression      (rule 42)

	IDENT          shift, and enter state 27
	STRING         shift, and enter state 76
	INT            shift, and enter state 77

	PropertyRef    goto state 74
	Expression     goto state 88

State 59

	EdgeType -> ':' IDENT .                             (rule 26)

	SELECT         reduce using rule 26
	FROM           reduce using rule 26
	CREATE         reduce using rule 26
	UPDATE         reduce using rule 26
	DELETE         reduce using rule 26
	'->'           reduce using rule 26
	%eof           reduce using rule 26


State 60

	Condition -> '(' NodePattern . ')' '-' EdgePattern '->' '(' NodePattern ')'    (rule 38)

	')'            shift, and enter state 87


State 61

	Condition -> Condition . AND Condition              (rule 28)
	Condition -> Condition . OR Condition               (rule 29)
	Condition -> '(' Condition . ')'                    (rule 39)

	AND            shift, and enter state 64
	OR             shift, and enter state 65
	')'            shift, and enter state 86


State 62

	NodePattern -> '(' . IDENT ')'                      (rule 25)
	Condition -> '(' . NodePattern ')' '-' EdgePattern '->' '(' NodePattern ')'    (rule 38)
	Condition -> '(' . Condition ')'                    (rule 39)

	NOT            shift, and enter state 40
	'('            shift, and enter state 62
	IDENT          shift, and enter state 85

	PropertyRef    goto state 38
	NodePattern    goto state 60
	Condition      goto state 61

State 63

	Condition -> Condition . AND Condition              (rule 28)
	Condition -> Condition . OR Condition               (rule 29)
	Condition -> NOT Condition .                        (rule 30)

	SELECT         reduce using rule 30
	FROM           reduce using rule 30
	AND            shift, and enter state 64
			(reduce using rule 30)

	OR             shift, and enter state 65
			(reduce using rule 30)

	CREATE         reduce using rule 30
	UPDATE         reduce using rule 30
	DELETE         reduce using rule 30
	')'            reduce using rule 30
	%eof           reduce using rule 30


State 64

	Condition -> Condition AND . Condition              (rule 28)

	NOT            shift, and enter state 40
	'('            shift, and enter state 41
	IDENT          shift, and enter state 27

	PropertyRef    goto state 38
	Condition      goto state 84

State 65

	Condition -> Condition OR . Condition               (rule 29)

	NOT            shift, and enter state 40
	'('            shift, and enter state 41
	IDENT          shift, and enter state 27

	PropertyRef    goto state 38
	Condition      goto state 83

State 66

	Condition -> PropertyRef STARTS_WITH . Expression    (rule 36)

	IDENT          shift, and enter state 27
	STRING         shift, and enter state 76
	INT            shift, and enter state 77

	PropertyRef    goto state 74
	Expression     goto state 82

State 67

	Condition -> PropertyRef '=' . Expression           (rule 31)

	IDENT          shift, and enter state 27
	STRING         shift, and enter state 76
	INT            shift, and enter state 77

	PropertyRef    goto state 74
	Expression     goto state 81

State 68

	Condition -> PropertyRef '<' . Expression           (rule 32)

	IDENT          shift, and enter state 27
	STRING         shift, and enter state 76
	INT            shift, and enter state 77

	PropertyRef    goto state 74
	Expression     goto state 80

State 69

	Condition -> PropertyRef '>' . Expression           (rule 33)

	IDENT          shift, and enter state 27
	STRING         shift, and enter state 76
	INT            shift, and enter state 77

	PropertyRef    goto state 74
	Expression     goto state 79

State 70

	Condition -> PropertyRef '<=' . Expression          (rule 34)

	IDENT          shift, and enter state 27
	STRING         shift, and enter state 76
	INT            shift, and enter state 77

	PropertyRef    goto state 74
	Expression     goto state 78

State 71

	Condition -> PropertyRef '>=' . Expression          (rule 35)

	IDENT          shift, and enter state 27
	STRING         shift, and enter state 76
	INT            shift, and enter state 77

	PropertyRef    goto state 74
	Expression     goto state 75

State 72

	Condition -> PropertyRef HAS . STRING               (rule 37)

	STRING         shift, and enter state 73


State 73

	Condition -> PropertyRef HAS STRING .               (rule 37)

	SELECT         reduce using rule 37
	FROM           reduce using rule 37
	AND            reduce using rule 37
	OR             reduce using rule 37
	CREATE         reduce using rule 37
	UPDATE         reduce using rule 37
	DELETE         reduce using rule 37
	')'            reduce using rule 37
	%eof           reduce using rule 37


State 74

	Expression -> PropertyRef .                         (rule 45)

	SELECT         reduce using rule 45
	FROM           reduce using rule 45
	AND            reduce using rule 45
	OR             reduce using rule 45
	CREATE         reduce using rule 45
	UPDATE         reduce using rule 45
	DELETE         reduce using rule 45
	','            reduce using rule 45
	')'            reduce using rule 45
	%eof           reduce using rule 45


State 75

	Condition -> PropertyRef '>=' Expression .          (rule 35)

	SELECT         reduce using rule 35
	FROM           reduce using rule 35
	AND            reduce using rule 35
	OR             reduce using rule 35
	CREATE         reduce using rule 35
	UPDATE         reduce using rule 35
	DELETE         reduce using rule 35
	')'            reduce using rule 35
	%eof           reduce using rule 35


State 76

	Expression -> STRING .                              (rule 44)

	SELECT         reduce using rule 44
	FROM           reduce using rule 44
	AND            reduce using rule 44
	OR             reduce using rule 44
	CREATE         reduce using rule 44
	UPDATE         reduce using rule 44
	DELETE         reduce using rule 44
	','            reduce using rule 44
	')'            reduce using rule 44
	%eof           reduce using rule 44


State 77

	Expression -> INT .                                 (rule 43)

	SELECT         reduce using rule 43
	FROM           reduce using rule 43
	AND            reduce using rule 43
	OR             reduce using rule 43
	CREATE         reduce using rule 43
	UPDATE         reduce using rule 43
	DELETE         reduce using rule 43
	','            reduce using rule 43
	')'            reduce using rule 43
	%eof           reduce using rule 43


State 78

	Condition -> PropertyRef '<=' Expression .          (rule 34)

	SELECT         reduce using rule 34
	FROM           reduce using rule 34
	AND            reduce using rule 34
	OR             reduce using rule 34
	CREATE         reduce using rule 34
	UPDATE         reduce using rule 34
	DELETE         reduce using rule 34
	')'            reduce using rule 34
	%eof           reduce using rule 34


State 79

	Condition -> PropertyRef '>' Expression .           (rule 33)

	SELECT         reduce using rule 33
	FROM           reduce using rule 33
	AND            reduce using rule 33
	OR             reduce using rule 33
	CREATE         reduce using rule 33
	UPDATE         reduce using rule 33
	DELETE         reduce using rule 33
	')'            reduce using rule 33
	%eof           reduce using rule 33


State 80

	Condition -> PropertyRef '<' Expression .           (rule 32)

	SELECT         reduce using rule 32
	FROM           reduce using rule 32
	AND            reduce using rule 32
	OR             reduce using rule 32
	CREATE         reduce using rule 32
	UPDATE         reduce using rule 32
	DELETE         reduce using rule 32
	')'            reduce using rule 32
	%eof           reduce using rule 32


State 81

	Condition -> PropertyRef '=' Expression .           (rule 31)

	SELECT         reduce using rule 31
	FROM           reduce using rule 31
	AND            reduce using rule 31
	OR             reduce using rule 31
	CREATE         reduce using rule 31
	UPDATE         reduce using rule 31
	DELETE         reduce using rule 31
	')'            reduce using rule 31
	%eof           reduce using rule 31


State 82

	Condition -> PropertyRef STARTS_WITH Expression .    (rule 36)

	SELECT         reduce using rule 36
	FROM           reduce using rule 36
	AND            reduce using rule 36
	OR             reduce using rule 36
	CREATE         reduce using rule 36
	UPDATE         reduce using rule 36
	DELETE         reduce using rule 36
	')'            reduce using rule 36
	%eof           reduce using rule 36


State 83

	Condition -> Condition . AND Condition              (rule 28)
	Condition -> Condition . OR Condition               (rule 29)
	Condition -> Condition OR Condition .               (rule 29)

	SELECT         reduce using rule 29
	FROM           reduce using rule 29
	AND            shift, and enter state 64
			(reduce using rule 29)

	OR             shift, and enter state 65
			(reduce using rule 29)

	CREATE         reduce using rule 29
	UPDATE         reduce using rule 29
	DELETE         reduce using rule 29
	')'            reduce using rule 29
	%eof           reduce using rule 29


State 84

	Condition -> Condition . AND Condition              (rule 28)
	Condition -> Condition AND Condition .              (rule 28)
	Condition -> Condition . OR Condition               (rule 29)

	SELECT         reduce using rule 28
	FROM           reduce using rule 28
	AND            shift, and enter state 64
			(reduce using rule 28)

	OR             shift, and enter state 65
			(reduce using rule 28)

	CREATE         reduce using rule 28
	UPDATE         reduce using rule 28
	DELETE         reduce using rule 28
	')'            reduce using rule 28
	%eof           reduce using rule 28


State 85

	PropertyRef -> IDENT . '.' IDENT                    (rule 21)
	PropertyRef -> IDENT .                              (rule 22)
	NodePattern -> '(' IDENT . ')'                      (rule 25)

	STARTS_WITH    reduce using rule 22
	'='            reduce using rule 22
	'<'            reduce using rule 22
	'>'            reduce using rule 22
	'<='           reduce using rule 22
	'>='           reduce using rule 22
	')'            shift, and enter state 45
	'.'            shift, and enter state 28
	HAS            reduce using rule 22


State 86

	Condition -> '(' Condition ')' .                    (rule 39)

	SELECT         reduce using rule 39
	FROM           reduce using rule 39
	AND            reduce using rule 39
	OR             reduce using rule 39
	CREATE         reduce using rule 39
	UPDATE         reduce using rule 39
	DELETE         reduce using rule 39
	')'            reduce using rule 39
	%eof           reduce using rule 39


State 87

	Condition -> '(' NodePattern ')' . '-' EdgePattern '->' '(' NodePattern ')'    (rule 38)

	'-'            shift, and enter state 94


State 88

	PropertyUpdate -> PropertyRef '=' Expression .      (rule 42)

	SELECT         reduce using rule 42
	FROM           reduce using rule 42
	CREATE         reduce using rule 42
	UPDATE         reduce using rule 42
	DELETE         reduce using rule 42
	','            reduce using rule 42
	%eof           reduce using rule 42


State 89

	PropertyUpdates -> PropertyUpdate ',' PropertyUpdates .    (rule 41)

	SELECT         reduce using rule 41
	FROM           reduce using rule 41
	CREATE         reduce using rule 41
	UPDATE         reduce using rule 41
	DELETE         reduce using rule 41
	%eof           reduce using rule 41


State 90

	CreateEdgeQuery -> CREATE EDGE FROM NodePattern TO NodePattern . TYPE EdgeType    (rule 14)

	TYPE           shift, and enter state 93


State 91

	SelectQuery -> SELECT PropertyRefs FROM NodePatterns WHERE Condition .    (rule 10)
	Condition -> Condition . AND Condition              (rule 28)
	Condition -> Condition . OR Condition               (rule 29)

	SELECT         reduce using rule 10
	FROM           reduce using rule 10
	AND            shift, and enter state 64
	OR             shift, and enter state 65
	CREATE         reduce using rule 10
	UPDATE         reduce using rule 10
	DELETE         reduce using rule 10
	%eof           reduce using rule 10


State 92

	SelectQuery -> SELECT '*' FROM NodePatterns WHERE Condition .    (rule 12)
	Condition -> Condition . AND Condition              (rule 28)
	Condition -> Condition . OR Condition               (rule 29)

	SELECT         reduce using rule 12
	FROM           reduce using rule 12
	AND            shift, and enter state 64
	OR             shift, and enter state 65
	CREATE         reduce using rule 12
	UPDATE         reduce using rule 12
	DELETE         reduce using rule 12
	%eof           reduce using rule 12


State 93

	CreateEdgeQuery -> CREATE EDGE FROM NodePattern TO NodePattern TYPE . EdgeType    (rule 14)

	':'            shift, and enter state 44

	EdgeType       goto state 97

State 94

	Condition -> '(' NodePattern ')' '-' . EdgePattern '->' '(' NodePattern ')'    (rule 38)

	'['            shift, and enter state 96
